// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDataTable should mound component and match snapshot 1`] = `
<div class="v-data-table white">
  <div class="v-data-table__inner">
    <div class="v-data-table__header white">
    </div>
    <div class="v-data-table__body white">
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <div class="v-input">
          <div class="v-input__select-slot primary--text">
            <label class="v-label v-label--active v-label--on-field v-label--has-state primary--text"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select v-validatable">
              <input class="v-select__input">
              <transition-stub>
                <div class="v-select-list elevation-4 white"
                     style="display: none;"
                >
                  <div class="v-list v-select--items-list">
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        10
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        15
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        20
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        25
                      </span>
                    </div>
                  </div>
                </div>
              </transition-stub>
            </div>
          </div>
          <div class="v-input__status">
            <transition-stub>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-data-table__pagination-pages">
        -
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-left"
             style="font-size: 18px;"
          >
          </i>
        </button>
        <button class="v-button elevation-3 blue lighten-1"
                style="min-width: 42px; margin: 0px 10px;"
        >
          1
        </button>
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-right"
             style="font-size: 18px;"
          >
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should set cols and match snapshot 1`] = `
<div class="v-data-table white">
  <div class="v-data-table__inner">
    <div class="v-data-table__header white">
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
    </div>
    <div class="v-data-table__body white">
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <div class="v-input">
          <div class="v-input__select-slot primary--text">
            <label class="v-label v-label--active v-label--on-field v-label--has-state primary--text"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select v-validatable">
              <input class="v-select__input">
              <transition-stub>
                <div class="v-select-list elevation-4 white"
                     style="display: none;"
                >
                  <div class="v-list v-select--items-list">
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        10
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        15
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        20
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        25
                      </span>
                    </div>
                  </div>
                </div>
              </transition-stub>
            </div>
          </div>
          <div class="v-input__status">
            <transition-stub>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-data-table__pagination-pages">
        -
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-left"
             style="font-size: 18px;"
          >
          </i>
        </button>
        <button class="v-button elevation-3 blue lighten-1"
                style="min-width: 42px; margin: 0px 10px;"
        >
          1
        </button>
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-right"
             style="font-size: 18px;"
          >
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test column filter and match snapshot 1`] = `
<div class="v-data-table white">
  <div class="v-data-table__inner">
    <div class="v-data-table__header white">
      <div class="v-data-table__cell text-align--start white v-data-table-col v-data-table-col--sorted"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
            <button class="v-icon v-icon--link v-icon--clickable fas fa-arrow-up v-data-table-col__actions-sort v-data-table-col__actions-sort--active"
                    style="font-size: 14px;"
            >
            </button>
            <button class="v-icon v-icon--link v-icon--clickable fas fa-align-justify v-data-table-col__actions-filter"
                    style="font-size: 14px;"
            >
            </button>
          </span>
          <div class="v-data-table-col__filter white"
               style
          >
            <span class="v-data-table-col__filter-header">
              Name
            </span>
            <div class="v-input">
              <div class="v-input__field-slot primary--text">
                <div class="v-input__prepend-icon">
                  <i class="v-icon fas fa-search primary--text"
                     style="font-size: 16px;"
                     dark="false"
                  >
                  </i>
                </div>
                <div class="v-input__clear">
                  <button class="v-icon v-icon--link v-icon--clickable fas fa-times primary--text"
                          style="font-size: 16px;"
                          dark="false"
                  >
                  </button>
                </div>
                <label class="v-label v-label--on-field primary--text"
                       style="left: 0px; position: absolute;"
                >
                  insert
                </label>
                <div class="v-text-field v-validatable">
                  <input class="v-text-field__input"
                         type="text"
                  >
                </div>
              </div>
              <div class="v-input__status">
                <transition-stub>
                </transition-stub>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
    </div>
    <div class="v-data-table__body white">
      <div class="v-data-table__row">
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            Alex
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            alex@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            Ben
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            ben@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            some body text
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <div class="v-input">
          <div class="v-input__select-slot primary--text">
            <label class="v-label v-label--active v-label--on-field v-label--has-state primary--text"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select v-validatable">
              <input class="v-select__input">
              <transition-stub>
                <div class="v-select-list elevation-4 white"
                     style="display: none;"
                >
                  <div class="v-list v-select--items-list">
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        10
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        15
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        20
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        25
                      </span>
                    </div>
                  </div>
                </div>
              </transition-stub>
            </div>
          </div>
          <div class="v-input__status">
            <transition-stub>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 2 from 2
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-left"
             style="font-size: 18px;"
          >
          </i>
        </button>
        <button class="v-button elevation-3 blue lighten-1"
                style="min-width: 42px; margin: 0px 10px;"
        >
          1
        </button>
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-right"
             style="font-size: 18px;"
          >
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`VDataTable should test column sort and match snapshot 1`] = `
<div class="v-data-table white">
  <div class="v-data-table__inner">
    <div class="v-data-table__header white">
      <div class="v-data-table__cell text-align--start white v-data-table-col v-data-table-col--sorted"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Name
          </div>
          <span class="v-data-table-col__actions">
            <button class="v-icon v-icon--link v-icon--clickable fas fa-arrow-up v-data-table-col__actions-sort v-data-table-col__actions-sort--active"
                    style="font-size: 14px;"
            >
            </button>
          </span>
        </div>
      </div>
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Email
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
      <div class="v-data-table__cell text-align--start white v-data-table-col"
           style="width: 125px;"
      >
        <div class="v-data-table__cell-content">
          <div class="v-data-table-col__title">
            Body
          </div>
          <span class="v-data-table-col__actions">
          </span>
        </div>
      </div>
    </div>
    <div class="v-data-table__body white">
      <div class="v-data-table__row">
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            Alex
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            alex@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            some body text
          </div>
        </div>
      </div>
      <div class="v-data-table__row">
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            Ben
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            ben@mail.ru
          </div>
        </div>
        <div class="v-data-table__cell text-align--start undefined"
             style="width: 125px;"
        >
          <div class="v-data-table__cell-content">
            some body text
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-data-table__footer">
    <div class="v-data-table__pagination">
      <div class="v-data-table__pagination-select">
        <span class="v-data-table__pagination-label">
          Rows per page
        </span>
        <div class="v-input">
          <div class="v-input__select-slot primary--text">
            <label class="v-label v-label--active v-label--on-field v-label--has-state primary--text"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select v-validatable">
              <input class="v-select__input">
              <transition-stub>
                <div class="v-select-list elevation-4 white"
                     style="display: none;"
                >
                  <div class="v-list v-select--items-list">
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        10
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        15
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        20
                      </span>
                    </div>
                    <div class="v-list-item">
                      <span class="v-list-item__title">
                        25
                      </span>
                    </div>
                  </div>
                </div>
              </transition-stub>
            </div>
          </div>
          <div class="v-input__status">
            <transition-stub>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-data-table__pagination-pages">
        1 - 2 from 2
      </div>
      <div class="v-data-table__pagination-route">
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-left"
             style="font-size: 18px;"
          >
          </i>
        </button>
        <button class="v-button elevation-3 blue lighten-1"
                style="min-width: 42px; margin: 0px 10px;"
        >
          1
        </button>
        <button class="v-button elevation-3 primary"
                style="min-width: 42px;"
        >
          <i class="v-icon fas fa-chevron-right"
             style="font-size: 18px;"
          >
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;
